clusters/labinfra/apps/airflow.xuperson.org/airflow-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    app.kubernetes.io/name: airflow
    app.kubernetes.io/component: orchestration
